# advent_of_code_2020

./: README.md  advent-of-code2020.cabal
01/: part1.hs
03/: day3.hs
04/: day4.hs
05/: day5.hs
06/: day6.hs
07/: day7.hs
day1/: part1.hs  part2.hs
day2/: day2.hs
programs/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs
src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs
