cabal-version:      2.4
name:               advent-of-code2020
version:            0.1.0.0

synopsis:           Advent of Code 2020 solutions.
description:        My solutions in Haskell for the 2020 Advent of Code.
license:            MIT
author:             Michael Reed
maintainer:         no@one.com

extra-source-files:
    README.md

executable Day01
    main-is:          Day01.hs
    build-depends:    base, megaparsec
    hs-source-dirs:   programs
    default-language: Haskell2010

executable Day02
    main-is:          Day02.hs
    build-depends:    base, text
    hs-source-dirs:   programs
    default-language: Haskell2010

executable Day03
    main-is:          Day03.hs
    build-depends:    base
    hs-source-dirs:   programs
    default-language: Haskell2010

executable Day04
    main-is:          Day04.hs
    build-depends:    base, parsec, text
    hs-source-dirs:   programs
    default-language: Haskell2010

executable Day05
    main-is:          Day05.hs
    build-depends:    base, containers
    hs-source-dirs:   programs
    default-language: Haskell2010

executable Day06
    main-is:          Day06.hs
    build-depends:    base, text, containers
    hs-source-dirs:   programs
    default-language: Haskell2010

executable Day07
    main-is:          Day07.hs
    build-depends:    base, megaparsec, text, containers
    hs-source-dirs:   programs
    default-language: Haskell2010
