cabal-version:      2.4
name:               advent-of-code2020
version:            0.1.0.0

synopsis:           Advent of Code 2020 solutions.
description:        My solutions in Haskell for the 2020 Advent of Code.
license:            MIT
author:             Michael Reed
maintainer:         no@one.com

extra-source-files:
    README.md

library
    hs-source-dirs:     src
    exposed-modules:    Day01
                      , Day02
                      , Day03
                      , Day04
                      , Day05
                      , Day06
                      , Day07
                      , Day08

    build-depends:      base
                      , megaparsec
                      , text
                      , containers
                      , parsec
                      , array
                      , mtl

    default-extensions: OverloadedStrings
    default-language:   Haskell2010